Changelog for version xdx (3.0)
  * Compilation fixes for MAC OS X. Thanks to IZ0ETE.

Changelog for version xdx (2.2)
  * This fixes compilation issues due to a missing time.h include statement.

Changelog for version xdx (2.1)
  * French, Spanish and Polish translation updates.
  * Allow zero length strings in the commands autologin entry. This will send
    a plain return.
  * Make sure we can fill in the callsign in the settings dialog.
  * Use glib functions for calling external programs.
  * CLX compatibility for auto-reconnect has been added.
  
Changelog for version xdx (2.0)
  * Polish translations by Boguslaw Ciastek SQ5TB, thanks!
  * A Dutch manual has been added.
  * Updated gettext and automake version used.
  * Install a .desktop file.
  * Language files and manuals have been converted to UTF-8.
  * The send widget is now a multiline text widget which allows entry of more
    characters.
  * Fonts used for DX messages (top window) and other messages (bottom window)
    can now be changed through the preferences dialog.
  * Linespacing added to the chat window, which makes it better readable.
  * You can turn local echo off in the preferences dialog.
  * The position of the divider between the chat and DX window is now saved.
  * You can now use highlights in the chat window. Highlights will produce
    colored text. Words to be highlighted can be set in the 'chat sidebar'.
    When the checkbox next to the highlighted word is checked, xdx will search
    for a highlight in all of the incoming text. When the checkbox is unchecked,
    only the text after the prompt is searched.
  * Checkboxes can be activated with ctrl-1 to ctrl-8. Entries can be focused
    with alt-1 to alt-8.
  * Alt-0 will switch focus to the send widget.
  * Colors used for highlighting can be set in page 3 of the preferences dialog.
  * The chat sidebar can be shown/hidden with F4.
  * You can disable automatic scrolling of the chat window by clicking in the