@@ -1,4 +1,3 @@
-2.4: Country lookups using an extra column, patch by IZ0ETE
 2.5: Function keys for commands,
-     Communicate witk xlog on countries worked/confirmed and colorize
-     DX-spots accordingly.
+     Communicate with xlog on countries worked/confirmed and colorize
+     DX-spots accordingly.No issues currently.
