@@ -29,5 +29,6 @@ enum
   REM_COLUMN,
   TIME_COLUMN,
   INFO_COLUMN,
+  COUNTRY_COLUMN,
   N_COLUMNS
 };
