@@ -64,6 +64,7 @@ rm -rf $RPM_BUILD_ROOT
 /usr/share/xdx/MANUAL.nl
 /usr/share/xdx/MANUAL.pl
 /usr/share/xdx/wwv.gnuplot
+/usr/share/xdx/cty.dat
 /usr/bin/xdx
 /usr/share/applications/Xdx.desktop
 
